--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.7.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "axios": "^0.19.2"
+    }
 }
