--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "devDependencies": {
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.5",
+        "@types/convict": "^5.2.1",
+        "@types/dotenv": "^8.2.0",
         "autoprefixer": "^9.7.6",
         "babel-loader": "^8.1.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "clean-webpack-plugin": "^3.0.0",
+        "convict": "^6.0.0",
         "css-loader": "^2.1.1",
+        "dotenv": "^8.2.0",
         "file-loader": "^3.0.1",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
@@ -33,6 +37,7 @@
         "ts-loader": "^6.2.2",
         "tslint": "^6.1.1",
         "typescript": "^3.8.3",
+        "val-loader": "^2.1.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.7.1"
